# orders-service

./: .coverage  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  orders.db  pyproject.toml  pytest.ini  safety-report.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: d2b965a1aeaf_create_orders.py
src/: main.py
src/application/use_cases/: create_order.py  get_order.py  list_orders.py
src/domain/entities/: order.py
src/domain/repositories/: order_repository.py
src/infrastructure/: config.py
src/infrastructure/database/: db.py  models.py
src/infrastructure/repositories/: sqlalchemy_order_repository.py
src/interfaces/api/: dependencies.py  order_controller.py  schemas.py
tests/integration/: test_api.py
tests/unit/: test_create_order.py
