[project]
name = "orders-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Angie2m",email = "angeles2m@outlook.com"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.137.2,<0.138.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "python-multipart (>=0.0.32,<0.0.33)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "safety (>=3.8.1,<4.0.0)",
    "pytest (>=9.1.0,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "ruff (>=0.15.18,<0.16.0)",
    "mypy (>=2.1.0,<3.0.0)",
    "types-python-jose (>=3.5.0.20260408,<4.0.0.0)",
    "isort (>=8.0.1,<9.0.0)"
]
